--- a/src/Skopka.Abstraction/Skopka.Abstraction.csproj
+++ b/src/Skopka.Abstraction/Skopka.Abstraction.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Skopka.Abstraction.OperationResult\Skopka.Abstraction.OperationResult.csproj" />
+      <ProjectReference Include="..\Skopka.Abstraction.Serialization\Skopka.Abstraction.Serialization.csproj" />
     </ItemGroup>
 
 </Project>
