--- a/src/Skopka.Abstraction.OperationResult/Skopka.Abstraction.OperationResult.csproj
+++ b/src/Skopka.Abstraction.OperationResult/Skopka.Abstraction.OperationResult.csproj
@@ -4,6 +4,9 @@
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>Skopka.Abstraction.OperationResult</PackageId>
+        <Description>OperationResult primitives (success/failure + structured errors + functional composition).</Description>
+        <IsPackable>true</IsPackable>
     </PropertyGroup>
 
 </Project>
