--- a/src/Skopka.Abstraction.Serialization/Skopka.Abstraction.Serialization.csproj
+++ b/src/Skopka.Abstraction.Serialization/Skopka.Abstraction.Serialization.csproj
@@ -9,4 +9,8 @@
         <IsPackable>true</IsPackable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <None Include="README.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
+
 </Project>
