--- a/src/Skopka.Abstraction/Skopka.Abstraction.csproj
+++ b/src/Skopka.Abstraction/Skopka.Abstraction.csproj
@@ -15,4 +15,8 @@
       <ProjectReference Include="..\Skopka.Abstraction.Serialization\Skopka.Abstraction.Serialization.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <None Include="README.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
+
 </Project>
