--- a/src/Skopka.Abstraction.OperationResult/Skopka.Abstraction.OperationResult.csproj
+++ b/src/Skopka.Abstraction.OperationResult/Skopka.Abstraction.OperationResult.csproj
@@ -7,6 +7,7 @@
         <PackageId>Skopka.Abstraction.OperationResult</PackageId>
         <Description>OperationResult primitives (success/failure + structured errors + functional composition).</Description>
         <IsPackable>true</IsPackable>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
