--- a/src/Skopka.Abstraction.Serialization/Skopka.Abstraction.Serialization.csproj
+++ b/src/Skopka.Abstraction.Serialization/Skopka.Abstraction.Serialization.csproj
@@ -7,6 +7,7 @@
         <PackageId>Skopka.Abstraction.Serialization</PackageId>
         <Description>Serialization primitives (currently: Optional&lt;T&gt; Missing/Null/Value + JSON converter).</Description>
         <IsPackable>true</IsPackable>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
